TwitterBot/css/main.css
.fa-times-circle {
    color: #dc3545;
}

.fa-check, .fa-check-circle, .fa-twitter-square {
    color: #28a745;
}

.home-icons {
    color: #1DA1F2;
}

.home-icons:hover {
    color: #1c5fc9
}

.twitter, .fa-microsoft {
    color: #1DA1F2;
}

#redirect-card {
    margin-top: 50px;
}

.fa-exclamation-triangle {
    color: #ffc107;
}

.fa-compress {
    color: #d4d4d4;
}

.fa-compress:hover {
    color: #a8a8a8;
}

.fa-user {
    color: #2b2b2b;
}

.fa-clock, .fa-toggle-off {
    color: gray;
}

.fa-toggle-on {
    color: #007bff;
}

